--- a/amazon/ec2/enable-volume-io.html
+++ b/amazon/ec2/enable-volume-io.html
@@ -1,7 +1,7 @@
 ---
 id      : amazon-ec2-enable-volume-io
 layout  : default
-title   : Amazon:EC2:EnableVolumeIo
+title   : Amazon:EC2:EnableVolumeIO
 tagline : ???
 sitemap : true
 ---
@@ -17,8 +17,8 @@ sitemap : true
   </h1>
 
 {% highlight javascript %}
-ec2.EnableVolumeIo({}, function(err, data) {
-    fmt.title("Amazon:EC2:EnableVolumeIo");
+ec2.EnableVolumeIO({}, function(err, data) {
+    fmt.title("Amazon:EC2:EnableVolumeIO");
     fmt.dump(err, 'Error');
     fmt.dump(data, 'Data');
 });
