Open the docs in a new window

--- a/amazon/simpledb/select.html
+++ b/amazon/simpledb/select.html
@@ -13,7 +13,7 @@ sitemap : true
 
   <h1>
     Select
-    <small>(<a href="http://goo.gl/N93md">Open docs on AWS</a>))</small>
+    <small>(<a target="_new" href="http://goo.gl/N93md">Open docs on AWS</a>)</small>
   </h1>
 
 {% highlight javascript %}
