--- a/amazon/simpledb/batch-delete-attributes.html
+++ b/amazon/simpledb/batch-delete-attributes.html
@@ -13,7 +13,7 @@ sitemap : true
 
   <h1>
     BatchDeleteAttributes
-    <small>(<a href="http://goo.gl/aC9Ek">Open docs on AWS</a>))</small>
+    <small>(<a target="_new" href="http://goo.gl/aC9Ek">Open docs on AWS</a>)</small>
   </h1>
 
 {% highlight javascript %}
