--- a/amazon/simpledb/put-attributes.html
+++ b/amazon/simpledb/put-attributes.html
@@ -13,7 +13,7 @@ sitemap : true
 
   <h1>
     PutAttributes
-    <small>(<a href="">Open docs on AWS</a>))</small>
+    <small>(<a target="_new" href="">Open docs on AWS</a>)</small>
   </h1>
 
 {% highlight javascript %}
