--- a/amazon/simpledb/delete-domain.html
+++ b/amazon/simpledb/delete-domain.html
@@ -30,7 +30,7 @@ sdb.DeleteDomain({}, function(err, data) {
 
   <h2>Result</h2>
 
-{% highlight %}
+{% highlight javascript %}
 ...
 {% endhighlight %}
 
