--- a/amazon/simpledb/list-domains.html
+++ b/amazon/simpledb/list-domains.html
@@ -30,7 +30,7 @@ sdb.ListDomains({}, function(err, data) {
 
   <h2>Result</h2>
 
-{% highlight %}
+{% highlight javascript %}
 ...
 {% endhighlight %}
 
