--- a/amazon/simpledb/get-attributes.html
+++ b/amazon/simpledb/get-attributes.html
@@ -30,7 +30,7 @@ sdb.GetAttributes({}, function(err, data) {
 
   <h2>Result</h2>
 
-{% highlight %}
+{% highlight javascript %}
 ...
 {% endhighlight %}
 
