Change the order of the example

--- a/amazon/ec2/create-tags.html
+++ b/amazon/ec2/create-tags.html
@@ -16,6 +16,13 @@ sitemap : true
     <small>(<a href="http://goo.gl/Vmkqc">Open docs on AWS</a>)</small>
   </h1>
 
+  <h2>Args</h2>
+
+  <p><strong>ResourceId</strong>: an array of resources.</p>
+  <p><strong>Tag</strong>: an array of objects which contain Key and Value.</p>
+
+  <h2>Example</h2>
+
 {% highlight javascript %}
 var args = {
     ResourceId : [ 'ami-1a2b3c4d', 'i-7f4d3a2b' ],
@@ -30,11 +37,6 @@ ec2.CreateTags(args, function(err, data) {
     fmt.dump(data, 'Data');
 });
 {% endhighlight %}
-
-  <h2>Args</h2>
-
-  <p><strong>ResourceId</strong>: an array of resources.</p>
-  <p><strong>Tag</strong>: an array of objects which contain Key and Value.</p>
 
   <h2>Result</h2>
 
