Medium is the correct value

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ sitemap : true
       <br>
       &bull; <strong>Issues</strong>: <a href="https://github.com/appsattic/node-awssum/issues">node-awssum/issues</a> <small>provide an example request/response</small>
       <br>
-      &bull; <strong>Twitter Updates</strong>: <a href="https://twitter.com/andychilton" class="twitter-follow-button" data-show-count="true" data-size="small" data-dnt="true">Follow @andychilton</a>
+      &bull; <strong>Twitter Updates</strong>: <a href="https://twitter.com/andychilton" class="twitter-follow-button" data-show-count="true" data-size="medium" data-dnt="true">Follow @andychilton</a>
       <br>
       &bull; <strong>Meteor</strong>: <a href="https://github.com/possibilities/meteor-awssum">meteor-awssum</a> <small>by Mike Bannister</small>
     </p>
