Add the changelog for v0.10.1

--- a/changelog.html
+++ b/changelog.html
@@ -13,6 +13,15 @@ sitemap : true
 
   <h1>ChangeLog</h1>
 
+  <h2>Release v0.10.1</h2>
+
+  <p>Fixes:</p>
+
+  <ul>
+    <li>Added AP_SOUTHEAST_1 for Amazon:ElasticBeanstalk</li>
+    <li>Fix xml2js at version v0.1.14 since v0.2.x has radically different behaviour</li>
+  </ul>
+
   <h2>Release v0.10.0</h2>
 
   <p>Services:</p>
