This operation is now renamed

--- a/amazon/ec2/enable-volume-io.html
+++ b/amazon/ec2/enable-volume-io.html
@@ -2,7 +2,7 @@
 id      : amazon-ec2-enable-volume-io
 layout  : default
 title   : Amazon EC2
-tagline : ...
+tagline : 
 sitemap : true
 ---
 {% capture menu %}
@@ -12,17 +12,28 @@ sitemap : true
 {% capture main %}
 
   <h1>
-    EnableVolumeIO
-    <small>(<a href="...">Open docs on AWS</a>)</small>
+    EnableVolumeIo
+    <small>(<a href="http://docs.amazonwebservices.com/AWSEC2/latest/APIReference/ApiReference-query-EnableVolumeIO.html">Open docs on AWS</a>)</small>
   </h1>
 
-  <h2>Args</h2>
+  <h2>Params</h2>
 
+
+  <dl>
   
-  <p>This operation doesn't take any arguments.</p>
+    <dt>Action (*)</dt>
+    <dd>param</dd>
   
+    <dt>VolumeId (*)</dt>
+    <dd>param</dd>
+  
+  </dl>
+
+
 
   <h2>Examples</h2>
+
+
 
 {% highlight javascript %}
 
