--- a/amazon/s3/put-bucket-acl.html
+++ b/amazon/s3/put-bucket-acl.html
@@ -55,6 +55,66 @@ sitemap : true
   <h2>Examples</h2>
 
 
+<h2>Using canned ACL to allow full control to an email address</h2>
+<p>The Grant* params allow you to set canned ACLs onto your bucket. Check the format you must use against the Amazon docs.</p>
+
+<pre>
+var params = {
+    BucketName : 'pie-18',
+    // similar thing for all the other Grant* params
+    GrantFullControl  : 'emailAddress=&quot;andychilton@gmail.com&quot;',
+};
+
+s3.PutBucketAcl(params, function(err, data) {
+    fmt.dump(err, 'Error');
+    fmt.dump(data, 'Data');
+});
+
+</pre>
+
+
+
+
+<h2>Using the full AccessControlPolicy</h2>
+<p>Specifying your own <code>AccessControlPolicy</code> means you can have complete control over your ACL, but it means you have to do a little bit more work to get the format correct.</p>
+
+<pre>
+var params = {
+    BucketName         : 'pie-18',
+    AccessControlPolicy  : {
+        Owner : {
+            ID : 'sdfgd',
+            DisplayName : 'something',
+        },
+        AccessControlList : [
+            {
+                Grant : {
+                    Grantee : {
+                        _attr :  {
+                            'xmlns:xsi' : 'http://www.w3.org/2001/XMLSchema-instance',
+                            'xsi:type' : 'CanonicalUser',
+                        },
+                        ID : '1111-2222-3333',
+                        DisplayName : 'a name'
+                    },
+                    Permission : 'READ',
+                },
+            },
+        ]
+    },
+};
+
+s3.PutBucketAcl(params, function(err, data) {
+    // gives a 400 saying that 1111-2222-3333 is an invalid CanonicalUser/ID
+    fmt.dump(err, 'Error');
+    fmt.dump(data, 'Data');
+});
+
+</pre>
+
+
+
+
 
 {% endcapture %}
 
