Add some testimonials to the front page

--- a/index.html
+++ b/index.html
@@ -36,19 +36,23 @@ sitemap : true
   <div class="row-fluid">
 
     <div class="span4">
-      <h2>Some Company</h2>
+      <h2>GreenQloud</h2>
       <p>
-        If you are using AwsSum in production, get in contact if you would like to provide a testimonial. :)
+        GreenQloud released their new management console in early September 2012, using Meteor and AwsSum! Not only are
+        they using AwsSum to talk to a cloud - it's their own cloud. What better than the cloud providers using it
+        themselves to talk to their own services?
       </p>
-      <p><a class="btn" href="#">View details &raquo;</a></p>
+      <p><a class="btn" href="https://twitter.com/Greenqloud/status/253343497128648704">View Details &raquo;</a></p>
     </div><!-- /.span4 -->
 
     <div class="span4">
-      <h2>Another Company</h2>
+      <h2>Medium</h2>
       <p>
-        If you are using AwsSum in production, get in contact if you would like to provide a testimonial. :)
+        When Medium launched in mid-August 2012, they turned to AwsSum to help them in their deploy process, which
+        involved talking to EC2, S3 and Route53. Deploying large numbers of server for large numbers of visitors is
+        something that AwsSum just laps up.
       </p>
-      <p><a class="btn" href="#">View details &raquo;</a></p>
+      <p><a class="btn" href="https://twitter.com/danfuzz/status/235501451894480897">View details &raquo;</a></p>
     </div><!-- /.span4 -->
 
     <div class="span4">
