Front page updates

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ sitemap : true
     </div><!-- /.span4 -->
 
     <div class="span4">
-      <h2>Medium</h2>
+      <h2>Medium.com</h2>
       <p>
         When Medium launched in mid-August 2012, they turned to AwsSum to help them in their deploy process, which
         involved talking to EC2, S3 and Route53. Deploying large numbers of server for large numbers of visitors is
@@ -56,11 +56,9 @@ sitemap : true
     </div><!-- /.span4 -->
 
     <div class="span4">
-      <h2>Final Company</h2>
       <p>
-        If you are using AwsSum in production, get in contact if you would like to provide a testimonial. :)
+        Do you use AwsSum and would like a mention here?
       </p>
-      <p><a class="btn" href="#">View details &raquo;</a></p>
     </div><!-- /.span4 -->
 
   </div><!-- /.row-fluid -->
