Add credits to Joey for all the documentation help

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@ sitemap : true
       &bull; <strong>Twitter Updates</strong>: <a href="https://twitter.com/andychilton" class="twitter-follow-button" data-show-count="true" data-size="medium" data-dnt="true">Follow @andychilton</a>
       <br>
       &bull; <strong>Meteor</strong>: <a href="https://github.com/possibilities/meteor-awssum">meteor-awssum</a> <small>by Mike Bannister</small>
+      <br>
+      And a big thanks to <a href="https://github.com/Techtribe">Joey van Dijk</a> for huge help with the documentation and adding lots of examples for each service. This website wouldn't be the same without your help. :)
     </p>
   </div>
 
