Add some headings to the template

--- a/.template.html
+++ b/.template.html
@@ -36,16 +36,19 @@ sitemap : true
 {{#if title}}<h3>{{title}}</h3>{{/if}}
 {{#if intro}}<p>{{{intro}}}</p>{{/if}}
 {{#if example}}
+<h4>Example</h4>
 <pre>
 {{{example}}}
 </pre>
 {{/if}}
 {{#if error}}
+<h4>Error</h4>
 <pre>
 {{{error}}}
 </pre>
 {{/if}}
 {{#if result}}
+<h4>Result</h4>
 <pre>
 {{{result}}}
 </pre>
