Add TeeLaunch testimonial

--- a/index.html
+++ b/index.html
@@ -58,8 +58,15 @@ sitemap : true
     </div><!-- /.span4 -->
 
     <div class="span4">
+      <h2>TeeLaunch</h2>
       <p>
-        Do you use AwsSum and would like a mention here?
+        We bootstrapped <a href="https://teelaunch.com">TeeLaunch</a> and used AwsSum's S3 and CloudFront modules as
+        integral parts of our stack.  This helped us take load off our servers, reduce costs, and focus on improving
+        performance for our end-users.
+      </p>
+      <p>
+        <em>Nick Baugh - Founder</em>
+      </p>
       </p>
     </div><!-- /.span4 -->
 
