Make the person strong rather than em

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ sitemap : true
         performance for our end-users.
       </p>
       <p>
-        <em>Nick Baugh - Founder</em>
+        <strong>Nick Baugh - Founder</strong>
       </p>
       </p>
     </div><!-- /.span4 -->
