--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ sitemap : true
     <div class="span4">
       <h2>GreenQloud</h2>
       <p>
-        GreenQloud released their new management console in early September 2012, using Meteor and AwsSum! Not only are
-        they using AwsSum to talk to a cloud - it's their own cloud. What better than the cloud providers using it
-        themselves to talk to their own services?
+        <a href="http://greenqloud.com/">GreenQloud</a> released their new management console in early September 2012,
+        using Meteor and AwsSum! Not only are they using AwsSum to talk to a cloud - it's their own cloud. What better
+        than the cloud providers using it themselves to talk to their own services?
       </p>
       <p><a class="btn" href="https://twitter.com/Greenqloud/status/253343497128648704">View Details &raquo;</a></p>
     </div><!-- /.span4 -->
@@ -50,9 +50,9 @@ sitemap : true
     <div class="span4">
       <h2>Medium.com</h2>
       <p>
-        When Medium launched in mid-August 2012, they turned to AwsSum to help them in their deploy process, which
-        involved talking to EC2, S3 and Route53. Deploying large numbers of server for large numbers of visitors is
-        something that AwsSum just laps up.
+        When <a href="http://medium.com/">Medium</a> launched in mid-August 2012, they turned to AwsSum to help them in
+        their deploy process, which involved talking to EC2, S3 and Route53. Deploying large numbers of server for
+        large numbers of visitors is something that AwsSum just laps up.
       </p>
       <p><a class="btn" href="https://twitter.com/danfuzz/status/235501451894480897">View details &raquo;</a></p>
     </div><!-- /.span4 -->
