Fix up case of Teelaunch

--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@ sitemap : true
     </div><!-- /.span4 -->
 
     <div class="span4">
-      <h2>TeeLaunch</h2>
+      <h2>Teelaunch</h2>
       <p>
-        We bootstrapped <a href="https://teelaunch.com">TeeLaunch</a> and used AwsSum's S3 and CloudFront modules as
+        We bootstrapped <a href="https://teelaunch.com">Teelaunch</a> and used AwsSum's S3 and CloudFront modules as
         integral parts of our stack.  This helped us take load off our servers, reduce costs, and focus on improving
         performance for our end-users.
       </p>
       <p>
-        <strong>Nick Baugh - Founder</strong>
+        <strong>Founder of Teelaunch</strong>
       </p>
       </p>
     </div><!-- /.span4 -->
