--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ sitemap : true
       <br>
       &bull; <strong>Meteor</strong>: <a href="https://github.com/possibilities/meteor-awssum">meteor-awssum</a> <small>by Mike Bannister</small>
       <br>
-      <small>And a big thanks to <a href="https://github.com/Techtribe">Joey van Dijk</a> for huge help with the documentation and adding lots of examples for each service. This website wouldn't be the same without your help. :)</small>
+      <small>And a big thanks to <a href="https://github.com/Techtribe">Joey van Dijk</a> for huge help with the documentation and adding lots of examples for each service.</small>
     </p>
   </div>
 
