fixes + started with cloudwatch
new examples and typo-fixes

--- a/amazon/cloudwatch/index.html
+++ b/amazon/cloudwatch/index.html
@@ -11,7 +11,19 @@ sitemap : true
 
 {% capture main %}
 
-  <h2>Amazon CloudWatch</h2>
+  <h2>Loading AwsSum's Amazon CloudWatch</h2>
+
+{% highlight javascript %}
+var awssum = require('awssum');
+var amazon = awssum.load('amazon/amazon');
+var CloudWatch = awssum.load('amazon/cloudwatch').CloudWatch;
+
+var cw = new CloudWatch({
+    'accessKeyId'     : process.env.accessKeyId,
+    'secretAccessKey' : process.env.secretAccessKey,
+    'region'          : amazon.US_EAST_1
+});
+{% endhighlight %}
 
 {% endcapture %}
 
