--- a/amazon/sts/index.html
+++ b/amazon/sts/index.html
@@ -11,7 +11,19 @@ sitemap : true
 
 {% capture main %}
 
-  <h2>Amazon STS</h2>
+  <h2>Loading AwsSum's Amazon STS</h2>
+
+{% highlight javascript %}
+var awssum = require('awssum');
+var amazon = awssum.load('amazon/amazon');
+var Sts = awssum.load('amazon/sts').Sts;
+
+var sts = new Sts({
+    'accessKeyId'     : process.env.accessKeyId,
+    'secretAccessKey' : process.env.secretAccessKey,
+    'region'          : amazon.US_EAST_1
+});
+{% endhighlight %}
 
 {% endcapture %}
 
