--- a/changelog.html
+++ b/changelog.html
@@ -21,7 +21,7 @@ sitemap : true
     <li>Added support for the Sydney region (AP_SOUTHEAST_2)</li>
     <li>Now uses your AwsAccountId in format 111122223333 or 1111-2222-3333 where AWS requires it</li>
     <li>Added support for PriceClass for Amazon:CloudFront</li>
-    <li>Added support for Amazon:EC2 resersed instance marketplace</li>
+    <li>Added support for Amazon:EC2 reserved instance marketplace</li>
     <li>Added support for CORS on AmazonS3 buckets</li>
     <li>lots more examples</li>
     <li>More unit and integration tests</li>
