--- a/.template.html
+++ b/.template.html
@@ -21,10 +21,10 @@ sitemap : true
 <table class="table table-striped table-condensed">
   <thead>
     <tr>
-      <th>Param Name</th>
-      <th>Required</th>
-      <th>Type</th>
-      <th>Notes</th>
+      <th width="20%">Param Name</th>
+      <th width="10%">Required</th>
+      <th width="10%">Type</th>
+      <th width="60%">Notes</th>
     </tr>
   </thead>
   <tbody>
