--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ sitemap : true
       Node.js modules for talking to <strong>lots</strong> of Web Service APIs.
     </p>
     <p>
-      &bull; <strong>GitHub</strong>: <a href="https://github.com/appsattic/node-awssum/">AwsSum</a> <small>Please star :)</small>
+      &bull; <strong>GitHub</strong>: <a href="https://github.com/awssum/awssum/">AwsSum</a> <small>Please star :)</small>
       <br>
       &bull; <strong>NPM</strong>: <a href="https://npmjs.org/package/awssum">AwsSum</a>
       <br>
@@ -25,11 +25,9 @@ sitemap : true
       <br>
       &bull; <strong>Email</strong>: chilts@appsattic.com
       <br>
-      &bull; <strong>Issues</strong>: <a href="https://github.com/appsattic/node-awssum/issues">node-awssum/issues</a> <small>provide an example request/response</small>
+      &bull; <strong>Issues</strong>: <a href="https://github.com/awssum/awssum/issues">awssum/issues</a> <small>provide an example request/response</small>
       <br>
       &bull; <strong>Twitter Updates</strong>: <a href="https://twitter.com/andychilton" class="twitter-follow-button" data-show-count="true" data-size="medium" data-dnt="true">Follow @andychilton</a>
-      <br>
-      &bull; <strong>Meteor</strong>: <a href="https://github.com/possibilities/meteor-awssum">meteor-awssum</a> <small>by Mike Bannister</small>
       <br>
       <small>And a big thanks to <a href="https://github.com/Techtribe">Joey van Dijk</a> for huge help with the documentation and adding lots of examples for each service.</small>
     </p>
